# HS_stories

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/workflows/: build-app-apk.yml  keep-alive.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/res/drawable/: widget_btn.xml  widget_btn_accent.xml
app/ios/: Podfile
app/ios/HSStoryWidget/: HSStoryWidget.swift
app/ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  article_screen.dart  auth_service.dart  config.dart  home_screen.dart  login_screen.dart  main.dart  models.dart  theme.dart  widget_service.dart
app/store/: play-listing.md
app/test/: auth_test.dart  widget_test.dart
backend/: app.py  articles.py  auth.py  db.py  importer.py  parser.py  summarizer.py
backend/tests/: test_api.py  test_articles.py  test_auth.py  test_parser.py
backend/tests/fixtures/: sample_export.txt
deploy/: Dockerfile  entrypoint.sh  litestream.yml
docs/: login-plan.md
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: privacy.html
web/src/: api.js  main.jsx  styles.css
web/src/components/: AdminShortcut.jsx  Markdown.jsx  ProtectedRoute.jsx  SiteFooter.jsx
web/src/pages/: Article.jsx  Calendar.jsx  Home.jsx  Login.jsx
web/src/pages/admin/: Dashboard.jsx  Editor.jsx  Ingest.jsx  Login.jsx
(+7 files in other folders)
